new release pog

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     repositories {
+        maven {
+            url = "https://dl.bintray.com/minndevelopment/maven/club/minnced"
+        }
         maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = "https://repo1.maven.org/maven2" }
         jcenter()
@@ -93,6 +96,10 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
+
+    // peni
+
+    compile 'club.minnced:java-discord-rpc:2.0.2'
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
@@ -116,6 +123,11 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+}
+repositories {
+    maven {
+        url  "https://dl.bintray.com/minndevelopment/maven"
+    }
 }
 
 
@@ -150,6 +162,9 @@ publishing {
     repositories {
         maven {
             url "file:///${project.projectDir}/mcmodsrepo"
+        }
+        maven {
+            url = "https://dl.bintray.com/minndevelopment/maven/club/minnced/"
         }
 
             maven {
