--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 buildscript {
     repositories {
-        maven {
-            url = "https://dl.bintray.com/minndevelopment/maven/club/minnced"
-        }
         maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = "https://repo1.maven.org/maven2" }
         jcenter()
@@ -33,7 +30,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'snapshot', version: '20201028-1.16.3'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
@@ -97,9 +94,6 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
 
-    // peni
-
-    compile 'club.minnced:java-discord-rpc:2.0.2'
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
@@ -124,32 +118,27 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
 }
-repositories {
-    maven {
-        url  "https://dl.bintray.com/minndevelopment/maven"
-    }
-}
-
 
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
         attributes([
-            "Specification-Title": "cumclient",
-            "Specification-Vendor": "constantindev",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"constantindev"
-            //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Specification-Title"   : "cumclient",
+                "Specification-Vendor"  : "constantindev",
+                "Specification-Version" : "1", // We are version 1 of ourselves
+                "Implementation-Title"  : project.name,
+                "Implementation-Version": "${version}",
+                "Implementation-Vendor" : "constantindev",
+                "Copyright"             : "Constantindev"
+                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
+jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
@@ -167,12 +156,12 @@ publishing {
             url = "https://dl.bintray.com/minndevelopment/maven/club/minnced/"
         }
 
-            maven {
-                url = "https://repo1.maven.org/maven2"
-            }
-            mavenCentral()
+        maven {
+            url = "https://repo1.maven.org/maven2"
+        }
+        mavenCentral()
 
-            jcenter()
+        jcenter()
 
     }
 }
